User stan (#10)
* user_stan: stop publishing events from rest handler

* user_stan: rename account to user

* user_stan: stop deriving subject from event_names, use as is as nats streaming doesn't allow wildcard subscription

* user_stan: change all instance of account to user in all services

* user_stan: use underscore as the delimeter

* user_stan: use consistent durable name

* user_stan: use underscore as the delimeter for event subject

* user_stan: extract id not user id

* user_stan: use underscore as the delimeter in subject

* user_stan: use correct property key in promotion

* user_stan: transform _id to id for user mongoose object

* user_stan: send promo code in outgoing event in user service

* user_stan: downgrade rastio library as it wont receive missed events on reconnect

* user_stan: add logging of received events in wallet service

* user_stan: extract and send promotion code use in wallet service

* user_stan: rework eventstore client class to not be static

* user_stan: add user overview schema

* user_stan: use abstacted eventstore client publishing

* user_stan: use create index

* user_stan: add stan client

* user_stan: wrap clients in a namespace

* user_stan: add node nats streaming library

* user_stan: namespace changes

* user_stan: add workers outline

* user_stan: add wallet id in promotion data and correctly set aggregate id

* user_stan: subscribes to promotion applied event in wallet service

* user_stan: add update wallet service

* user_stan: implement promotion applied event handler

* user_stan: separate stan server connection in user service from constructor

* user_stan: connect and subscribe to stan events in user service

* user_stan: outline user's stan worker

* user_stan: use async in invoking stan worker event handlers

* user_stan: update user overview's wallet id to use string instead of object id as the id used in wallets in postgres's ULID

* user_st
